--- a/planes.html
+++ b/planes.html
@@ -1,6 +1,5 @@
-<!-- ===== FIX GLOBAL (quita blanco y asegura fondo oscuro) ===== -->
 <style>
-html, body{
+html,body{
   margin:0;
   padding:0;
   background:#050505;
@@ -8,287 +7,232 @@ html, body{
 }
 </style>
 
-<section class="zensite-plans" aria-label="Planes ZenSite">
+<section class="zensite-plans" id="plans">
 
-  <!-- ES / EN -->
-  <div class="plans-lang" aria-label="Language toggle">
-    <span class="active" data-lang="en" role="button" tabindex="0">EN</span>
-    <span data-lang="es" role="button" tabindex="0">ES</span>
+  <!-- BACK -->
+  <a href="#home" class="back-btn">← Inicio</a>
+
+  <!-- LANG -->
+  <div class="plans-lang">
+    <span class="active" data-lang="en">EN</span>
+    <span data-lang="es">ES</span>
   </div>
 
   <!-- HEADER -->
   <header class="plans-header">
     <h2>
-      <span data-es="Planes" data-en="Plans">Plans</span>
+      <span data-en="Plans" data-es="Planes">Plans</span>
       <strong>ZenSite</strong>
     </h2>
     <p
-      data-es="Diseño agresivo, tecnología real y presencia de alto nivel."
-      data-en="Aggressive design, real technology and high-level presence.">
+      data-en="Aggressive design, real technology and high-level presence."
+      data-es="Diseño agresivo, tecnología real y presencia de alto nivel.">
       Aggressive design, real technology and high-level presence.
     </p>
   </header>
 
-  <!-- GRID -->
-  <div class="plans-grid">
+  <!-- TRIANGLE -->
+  <div class="plans-triangle">
 
     <!-- Z -->
     <article class="plan plan-z" data-plan="ZenSite Z">
       <span class="plan-level">Z</span>
       <h3>ZenSite Z</h3>
 
-      <p class="plan-description"
-         data-es="Base sólida para negocios que necesitan verse profesionales desde el primer día."
-         data-en="Solid foundation for businesses that need to look professional from day one.">
+      <p
+        data-en="Solid foundation for businesses that need to look professional from day one."
+        data-es="Base sólida para negocios que necesitan verse profesionales desde el primer día.">
         Solid foundation for businesses that need to look professional from day one.
       </p>
 
-      <ul class="plan-features">
-        <li data-es="Diseño web personalizado" data-en="Custom web design">Custom web design</li>
-        <li data-es="Responsive total" data-en="Fully responsive">Fully responsive</li>
-        <li data-es="Estructura optimizada" data-en="Optimized structure">Optimized structure</li>
+      <ul>
+        <li data-en="Custom web design" data-es="Diseño web personalizado">Custom web design</li>
+        <li data-en="Fully responsive" data-es="Totalmente responsive">Fully responsive</li>
+        <li data-en="Optimized structure" data-es="Estructura optimizada">Optimized structure</li>
       </ul>
 
-      <div class="plan-cta" data-es="Elegir Z" data-en="Choose Z">Choose Z</div>
+      <div class="plan-cta"
+           data-en="Contact"
+           data-es="Contactar">Contact</div>
     </article>
 
     <!-- Z+ -->
-    <article class="plan plan-zplus" data-plan="ZenSite Z+">
+    <article class="plan plan-zplus main" data-plan="ZenSite Z+">
       <span class="plan-level">Z+</span>
       <h3>ZenSite Z+</h3>
 
-      <p class="plan-description"
-         data-es="Más impacto visual, animaciones avanzadas y mayor conversión."
-         data-en="More visual impact, advanced animations and higher conversion.">
+      <p
+        data-en="More visual impact, advanced animations and higher conversion."
+        data-es="Más impacto visual, animaciones avanzadas y mayor conversión.">
         More visual impact, advanced animations and higher conversion.
       </p>
 
-      <ul class="plan-features">
-        <li data-es="Animaciones premium" data-en="Premium animations">Premium animations</li>
-        <li data-es="SEO optimizado" data-en="Optimized SEO">Optimized SEO</li>
-        <li data-es="UI avanzada" data-en="Advanced UI">Advanced UI</li>
+      <ul>
+        <li data-en="Premium animations" data-es="Animaciones premium">Premium animations</li>
+        <li data-en="Optimized SEO" data-es="SEO optimizado">Optimized SEO</li>
+        <li data-en="Advanced UI" data-es="UI avanzada">Advanced UI</li>
       </ul>
 
-      <div class="plan-cta" data-es="Elegir Z+" data-en="Choose Z+">Choose Z+</div>
+      <div class="plan-cta"
+           data-en="Contact"
+           data-es="Contactar">Contact</div>
     </article>
 
-    <!-- Z PREMIUM -->
+    <!-- PREMIUM -->
     <article class="plan plan-zpremium" data-plan="ZenSite Z Premium">
       <span class="plan-level">Z PREMIUM</span>
       <h3>ZenSite Z Premium</h3>
 
-      <p class="plan-description"
-         data-es="Autoridad digital total, diseño de alto nivel y rendimiento extremo."
-         data-en="Full digital authority, high-end design and extreme performance.">
+      <p
+        data-en="Full digital authority, high-end design and extreme performance."
+        data-es="Autoridad digital total, diseño de alto nivel y rendimiento extremo.">
         Full digital authority, high-end design and extreme performance.
       </p>
 
-      <ul class="plan-features">
-        <li data-es="UX/UI profesional" data-en="Professional UX/UI">Professional UX/UI</li>
-        <li data-es="Velocidad extrema" data-en="Extreme speed">Extreme speed</li>
-        <li data-es="Optimización total" data-en="Full optimization">Full optimization</li>
+      <ul>
+        <li data-en="Professional UX/UI" data-es="UX/UI profesional">Professional UX/UI</li>
+        <li data-en="Extreme speed" data-es="Velocidad extrema">Extreme speed</li>
+        <li data-en="Full optimization" data-es="Optimización total">Full optimization</li>
       </ul>
 
-      <div class="plan-cta" data-es="Elegir Premium" data-en="Choose Premium">Choose Premium</div>
+      <div class="plan-cta"
+           data-en="Contact"
+           data-es="Contactar">Contact</div>
     </article>
 
   </div>
 </section>
 
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700;900&family=Orbitron:wght@600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800;900&family=Orbitron:wght@700;800&display=swap');
 
-/* SECTION */
 .zensite-plans{
-  position:relative;
-  min-height:100vh;              /* <- elimina “blanco” si tu página es corta */
-  padding:110px 6%;
+  min-height:100vh;
+  padding:140px 6% 120px;
   background:
-    radial-gradient(700px 400px at 15% 10%, rgba(0,255,150,.08), transparent 65%),
-    radial-gradient(700px 400px at 85% 20%, rgba(0,150,255,.10), transparent 65%),
-    radial-gradient(700px 400px at 50% 90%, rgba(255,200,0,.10), transparent 65%),
+    radial-gradient(700px 400px at 50% 20%, rgba(0,150,255,.15), transparent 65%),
+    radial-gradient(700px 400px at 20% 70%, rgba(0,255,150,.12), transparent 65%),
+    radial-gradient(700px 400px at 80% 80%, rgba(255,200,0,.12), transparent 65%),
     #050505;
-  color:#fff;
-  font-family:'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  overflow:hidden;
+  position:relative;
+  font-family:'Montserrat',sans-serif;
 }
+
+/* BACK */
+.back-btn{
+  position:absolute;
+  top:22px;
+  left:22px;
+  color:#fff;
+  text-decoration:none;
+  font-weight:800;
+  opacity:.7;
+}
+.back-btn:hover{opacity:1}
 
 /* LANG */
 .plans-lang{
   position:absolute;
-  top:18px;
+  top:22px;
   right:22px;
-  display:flex;
-  gap:10px;
-  font-size:11px;
+  font-size:16px;
   font-weight:900;
-  letter-spacing:1.5px;
-  user-select:none;
 }
 .plans-lang span{
+  margin-left:16px;
   cursor:pointer;
   opacity:.5;
-  transition:opacity .2s ease;
 }
 .plans-lang span.active{opacity:1}
 
 /* HEADER */
 .plans-header{
   max-width:900px;
-  margin:0 auto 70px;
+  margin-bottom:90px;
 }
 .plans-header h2{
-  font-size:clamp(38px,5vw,60px);
+  font-size:clamp(42px,6vw,72px);
   font-weight:900;
-  line-height:1.08;
-  text-shadow:0 2px 12px rgba(0,0,0,.45);
 }
 .plans-header strong{
   background:linear-gradient(90deg,#fff,#aaa);
   -webkit-background-clip:text;
-  background-clip:text;
   color:transparent;
 }
-.plans-header p{
-  margin-top:14px;
-  opacity:.85;
-  line-height:1.7;
-  max-width:650px;
-  text-shadow:0 1px 10px rgba(0,0,0,.35);
-}
 
-/* GRID */
-.plans-grid{
+/* TRIANGLE */
+.plans-triangle{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:36px;
-  max-width:1200px;
-  margin:0 auto;
+  grid-template-columns:repeat(3,1fr);
+  gap:42px;
 }
 
-/* CARD */
 .plan{
-  position:relative;
-  padding:70px 34px 40px;
+  padding:60px 36px;
   border-radius:28px;
-  background:linear-gradient(180deg,rgba(20,20,20,.85),rgba(20,20,20,.65));
+  background:rgba(20,20,20,.75);
   border:1px solid rgba(255,255,255,.12);
-  backdrop-filter:blur(18px);
   cursor:pointer;
-  transition:transform .35s ease, box-shadow .35s ease;
-}
-.plan:hover{
-  transform:translateY(-14px) scale(1.04);
-  box-shadow:0 35px 120px rgba(0,0,0,.85);
 }
 
-/* glow */
-.plan::after{
-  content:"";
-  position:absolute;
-  top:-120px;
-  right:-120px;
-  width:260px;
-  height:260px;
-  border-radius:50%;
-  filter:blur(50px);
-  opacity:.33;
-  pointer-events:none;
-}
-.plan-z::after{background:#6dff6d}
-.plan-zplus::after{background:#00c8ff}
-.plan-zpremium::after{background:gold}
-
-/* level */
-.plan-level{
-  position:absolute;
-  top:22px;
-  right:22px;
-  font-family:'Orbitron', system-ui, sans-serif;
-  font-weight:800;
-  letter-spacing:3px;
-  text-shadow:0 2px 12px rgba(0,0,0,.45);
-}
-.plan-z .plan-level{color:#6dff6d}
-.plan-zplus .plan-level{color:#00c8ff}
-.plan-zpremium .plan-level{color:gold}
-
-/* titles + text */
-.plan h3{
-  font-family:'Orbitron', system-ui, sans-serif;
-  font-size:28px;
-  margin:0 0 14px;
-  text-shadow:0 2px 12px rgba(0,0,0,.45);
-}
-.plan-description{
-  font-size:15px;
-  line-height:1.7;
-  opacity:.92;
-  margin:0 0 22px;
-  text-shadow:0 1px 10px rgba(0,0,0,.30);
+.plan.main{
+  transform:scale(1.08);
 }
 
-/* features */
-.plan-features{
+.plan ul{
   list-style:none;
-  margin:0 0 26px;
   padding:0;
 }
-.plan-features li{
-  padding:8px 0;
+.plan ul li{
+  padding:6px 0;
   border-bottom:1px solid rgba(255,255,255,.08);
-  opacity:.92;
 }
-.plan-features li:last-child{border-bottom:none}
 
-/* CTA (NO blanco) */
 .plan-cta{
+  margin-top:26px;
   text-align:center;
-  padding:14px 16px;
+  padding:14px;
   border-radius:14px;
-  background:linear-gradient(180deg,#101010,#000);
-  border:1px solid rgba(255,255,255,.18);
+  background:#000;
+  border:1px solid rgba(255,255,255,.2);
   font-weight:900;
-  letter-spacing:1px;
 }
 
 /* MOBILE */
-@media(max-width:600px){
-  .zensite-plans{padding:95px 6%}
-  .plan{padding:58px 24px 34px}
-  .plan h3{font-size:24px}
+@media(max-width:900px){
+  .plans-triangle{grid-template-columns:1fr}
+  .plan.main{transform:none}
 }
 </style>
 
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const phone = "15027942412";
-  const root = document.querySelector(".zensite-plans");
-  if (!root) return;
 
-  // WhatsApp click (card + CTA)
-  root.querySelectorAll(".plan").forEach(card => {
-    card.addEventListener("click", () => {
-      const plan = card.dataset.plan || "ZenSite";
-      const msg = encodeURIComponent("Hello, I'm interested in the " + plan + " plan.");
+  // WhatsApp
+  document.querySelectorAll(".plan").forEach(card=>{
+    card.addEventListener("click", ()=>{
+      const plan = card.dataset.plan;
+      const msg = encodeURIComponent(
+        "Hola, estoy interesado en el plan " + plan
+      );
       window.open(https://wa.me/${phone}?text=${msg}, "_blank");
     });
   });
 
-  // Translate ES/EN
-  const toggles = root.querySelectorAll(".plans-lang span");
-  const translatables = root.querySelectorAll("[data-es]");
+  // Translation
+  const langBtns = document.querySelectorAll(".plans-lang span");
+  const translatable = document.querySelectorAll("[data-en]");
 
   function setLang(lang){
-    toggles.forEach(t => t.classList.toggle("active", t.dataset.lang === lang));
-    translatables.forEach(el => { el.textContent = el.dataset[lang]; });
+    langBtns.forEach(b=>b.classList.toggle("active", b.dataset.lang===lang));
+    translatable.forEach(el=>{
+      el.textContent = el.dataset[lang];
+    });
   }
 
-  toggles.forEach(t => {
-    t.addEventListener("click", () => setLang(t.dataset.lang));
-    t.addEventListener("keydown", (e) => {
-      if (e.key === "Enter" || e.key === " ") setLang(t.dataset.lang);
-    });
+  langBtns.forEach(btn=>{
+    btn.addEventListener("click", ()=>setLang(btn.dataset.lang));
   });
 
   setLang("en");
